very big big changes

--- a/Initiative.html
+++ b/Initiative.html
@@ -164,7 +164,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="Empowered">
       <div class="planting-section page-margin">
 
         <h1 class=" sub-heading">
