--- a/privacy.html
+++ b/privacy.html
@@ -284,11 +284,11 @@
         </div>
     </header> -->
     <div class="breadcrumb-area mb-0">
-        <div class="container h-100">
-            <div class="row h-100 align-items-end">
+        <div class="container">
+            <div class="row title align-items-end">
                 <div class="col-12">
                     <div class="breadcumb--con">
-                        <h2 class="title">Privacy Policy</h2>
+                        <h2 class=" sub-heading">Privacy Policy</h2>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
@@ -304,11 +304,11 @@
             </div>
         </div>
         <div class="breadcrumb-bg-curve">
-            <img src="images/curve-5.png" alt="">
+            <img src="images/curve-1.png" alt="">
         </div>
     </div>
 
-    <div class="rydr-about-us-area section-padding-80 terms_main">
+    <div class="rydr-about-us-area  terms_main section-margin">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-12">
