--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
 
               <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"><img src="images/demo/Rider image-icon-01.png" alt="Image 1"></div>
-                <h3 class="mt-3">Easy pick & drop </h3>
+                <h3 class="mt-3 super-sub-points">Easy pick & drop </h3>
                 <p class='ellipse'>pick you up from any Metro
                   Station and Drop you at your
                   destination and Vice-Versap.</p>
@@ -344,7 +344,7 @@
 
               <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"><img src="images/demo/Rider image-icon-03.png" alt="Image 2"></div>
-                <h3 class="mt-3">Low cost rides</h3>
+                <h3 class="mt-3 super-sub-points">Low cost rides</h3>
                 <p class='ellipse'>Rides available at a very
                   attractive rates. Low surge
                   charges and no hidden cost.
@@ -354,7 +354,7 @@
 
               <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"> <img src="images/demo/Rider image-icon-02.png" alt="Image 3"></div>
-                <h3 class="mt-3">Assured rides</h3>
+                <h3 class="mt-3 super-sub-points">Assured rides</h3>
                 <p class='ellipse'>Get assured rides from any
                   metro station to your
                   destination and vice versa, in
@@ -373,7 +373,7 @@
 
               <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"><img src="images/demo/Rider image-icon-01.png" alt="Image 1"></div>
-                <h3>Easy pick & drop</h3>
+                <h3 class="super-sub-points">Easy pick & drop</h3>
                 <p class="ellipse">Pick you up from any Metro Station and drop you at your destination and vice versa.
                 </p>
               </div>
@@ -384,7 +384,7 @@
 
               <div class="customer-item driver-items" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"> <img src="images/demo/Rider image-icon-03.png" alt="Image 2"></div>
-                <h3>Low cost rides</h3>
+                <h3 class="super-sub-points">Low cost rides</h3>
                 <p class="ellipse">Rides available at very attractive rates. Low surge charges and no hidden costs. Pay
                   before you start the ride.</p>
               </div>
@@ -392,7 +392,7 @@
                 <div class="item-img">
                   <img src="images/demo/Rider image-icon-02.png" alt="Image 3">
                 </div>
-                <h3>Assured rides</h3>
+                <h3 class="super-sub-points">Assured rides</h3>
                 <p class="ellipse">Get assured rides from any metro station to your destination and vice versa in the
                   least time.</p>
               </div>
@@ -400,7 +400,7 @@
                 <div class="item-img">
                   <img src="images/demo/Rider image-icon-04.png" alt="Image 4">
                 </div>
-                <h3>Safe rides</h3>
+                <h3 class="super-sub-points">Safe rides</h3>
                 <p class="ellipse">Experience safe and secure rides with our verified drivers and safety measures in
                   place.</p>
               </div>
