--- a/AboutUs.html
+++ b/AboutUs.html
@@ -136,7 +136,7 @@
         <div class="row title align-items-end">
             <div class="col-12">
                 <div class="breadcumb--con">
-                    <h2 class=" sub-heading">About Us</h2>
+                    <h2 class=" sub-heading master-head">About Us</h2>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
