--- a/Drive_with_us.html
+++ b/Drive_with_us.html
@@ -85,7 +85,7 @@
           <div class="row title align-items-end">
               <div class="col-12">
                   <div class="breadcumb--con">
-                      <h2 class=" sub-heading">Advantages of Becoming RYDR Partner</h2>
+                      <h2 class=" sub-heading master-head">Advantages of Becoming RYDR Partner</h2>
                       <nav aria-label="breadcrumb">
                           <ol class="breadcrumb">
                               <li class="breadcrumb-item">
