--- a/privacy.html
+++ b/privacy.html
@@ -288,7 +288,7 @@
             <div class="row title align-items-end">
                 <div class="col-12">
                     <div class="breadcumb--con">
-                        <h2 class=" sub-heading">Privacy Policy</h2>
+                        <h2 class=" sub-heading master-head">Privacy Policy</h2>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item">
