--- a/safety.html
+++ b/safety.html
@@ -149,7 +149,7 @@
         <div class="row title align-items-end">
           <div class="col-12">
             <div class="breadcumb--con">
-              <h2 class=" sub-heading">We Ensure The Well Being of Both, Our Customers and Drivers</h2>
+              <h2 class=" sub-heading master-head">We Ensure The Well Being of Both, Our Customers and Drivers</h2>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                   <li class="breadcrumb-item">
