--- a/Initiative.html
+++ b/Initiative.html
@@ -80,21 +80,21 @@
 
 
 
-  <section class="page-margin">
-    <div class="initiative-top side-padding">
-      <div class="initi-head col ">
-        <h1 class="text-center sub-heading ">
-          Reducing Emissions – Together</h1>
-    
-        <p class="details">It's important that we take action to reduce the impact of pollution in the city we love.
+  <section class="page-margin d-flex justify-content-center align-items-center flex-column">
+    <h1 class=" sub-heading ">
+      Reducing Emissions – Together</h1>
+    <div class="first-initiative side-padding">
+      <div class="first-initi ">
+       
+        <p class="first-details">It's important that we take action to reduce the impact of pollution in the city we love.
           Rydr's mission is to improve the quality of air we breathe as we ride. you can contribute in reducing carbon
           emission by booking a ride with us.
           Rydr's mission is to improve air quality by offering sustainable transportation options. By sharing rides or
           using electric vehicles, we can significantly reduce carbon footprint and create a healthier environment for
           everyone. Every Rydr ride booked remove CO2 emissions, making a real difference in our city.</p>
       </div>
-      <div class=" col">
-        <img class="initi-img" src="images/demo/Emission_together.png" alt="">
+      <div class="">
+        <img class="first-initi-img" src="images/demo/Emission_together.png" alt="">
       </div>
     </div>
 
