--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     <section class="rydr-about-us-area skew-all">
 
       <div class="mission-container d-flex justify-content-center align-items-center">
-        <div class="row  col-9 d-flex justify-content-center align-items-center skew-reset">
+        <div class="row  col-md-8 d-flex justify-content-center align-items-center skew-reset">
           <div class="mission-section-margin">
             <h2 class="text-center sub-heading">Our Moto</h2>
           </div>
