--- a/Initiative.html
+++ b/Initiative.html
@@ -112,7 +112,7 @@
         <div class="method-card col-md-3">
           <img src="images/demo/leaf.png" alt="">
           <div class="methods-desc">
-            <p class="justify-content-center">
+            <p class="">
               All Rydr rides are carbon neutral – we offset every gram of CO2 emitted via Using Electric vehicles
             </p>
           </div>
@@ -121,7 +121,7 @@
         <div class="method-card col-md-3">
           <img src="images/demo/method-2.png" alt="">
           <div class="methods-desc">
-            <p class="justify-content-center">
+            <p class="">
               Select Rydr to reduce emissions for your ride – electric bike cabs, every time
             </p>
           </div>
@@ -130,7 +130,7 @@
         <div class="method-card col-md-3">
           <img src="images/demo/method-3.png" alt="">
           <div class="methods-desc">
-            <p class="justify-content-center">
+            <p class="">
               For every ride taken, we plant a tree. This not only helps in offsetting any minimal emissions produced
               but also contributes to reforestation efforts and biodiversity.
             </p>
