--- a/Initiative.html
+++ b/Initiative.html
@@ -107,9 +107,9 @@
         <h1 class="text-center sub-heading">How We’re Reducing Emissions</h1>
       </div>
 
-      <div class="methods col">
+      <div class="methods ">
 
-        <div class="method-card col-md-3">
+        <div class="method-card ">
           <img src="images/demo/leaf.png" alt="">
           <div class="methods-desc">
             <p class="">
@@ -118,7 +118,7 @@
           </div>
         </div>
 
-        <div class="method-card col-md-3">
+        <div class="method-card ">
           <img src="images/demo/method-2.png" alt="">
           <div class="methods-desc">
             <p class="">
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-        <div class="method-card col-md-3">
+        <div class="method-card ">
           <img src="images/demo/method-3.png" alt="">
           <div class="methods-desc">
             <p class="">
