--- a/AboutUs.html
+++ b/AboutUs.html
@@ -28,8 +28,14 @@
   <link rel="stylesheet" href="responsive/Utilities.css">
   <link rel="stylesheet" href="responsive/responsive.xl.css">
   <!-- --  -->
+
+  <!-- Poppins Fonts  -->
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
  
-  <script defer referrerpolicy="origin" src="js/s.js"></script>
+ 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
   <style>
@@ -84,6 +90,21 @@
     border-radius: 8px;
 }
 
+.top-banner {
+      width: 100%;
+      height: 70vh;
+      background: url('images/Rider\ image-04.png') no-repeat center center;
+      background-size: cover;
+      opacity: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 2em;
+      font-weight: bold;
+      margin-top: 40px;
+      margin-bottom: 30px;
+    }
   </style>
 </head>
 
@@ -155,6 +176,11 @@
         <img src="images/curve-1.png" alt="">
     </div>
 </div>
+
+  <!-- Top Banner Section -->
+  <div class="top-banner">
+   
+  </div>
     
   <div class="mission-container d-flex justify-content-center align-items-center section-margin">
     <div class="row col-md-10 col-12 d-flex justify-content-center align-items-centerr " >
@@ -293,7 +319,7 @@
 
     <script src="JavaScript/onclicked.js"></script>
 
-
+    <script defer referrerpolicy="origin" src="js/s.js"></script>
   <script src="js/jquery.min.js"></script>
 
   <script src="js/popper.min.js"></script>
