--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
   <link rel="stylesheet" href="responsive/responsive.xl.css">
   <!-- --  -->
 
+   <!-- Poppins Fonts  -->
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
+   
+
   <script defer referrerpolicy="origin" src="js/s.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
@@ -218,7 +226,7 @@
     <section class="rydr-about-us-area skew-all">
 
       <div class="mission-container d-flex justify-content-center align-items-center">
-        <div class="row  col-md-8 d-flex justify-content-center align-items-center skew-reset">
+        <div class=" d-flex justify-content-center align-items-center flex-column skew-reset">
           <div class="mission-section-margin">
             <h2 class="text-center sub-heading">Our Moto</h2>
           </div>
@@ -252,7 +260,7 @@
           </div>
 
           <div class="about-us-content">
-            <br>
+            
             <div class="mission-content col-md-7">
               <h3 class="super-sub-points">Creating Green Jobs</h3>
               <p>Empowering men and women who form part of a large workforce to become self-dependent by rendering green
@@ -321,14 +329,14 @@
       <!-- Crousal  -->
 
       <!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel"> -->
-      <ol class="carousel-indicators">
+      <!-- <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      </ol>
+      </ol> -->
       <div class="carousel-inner">
         <div class="carousel-item active" id="customer-part">
           <!-- crousal edit  -->
-          <div class="customer-cards section-margin container-fluid col-md-9 " data-aos="zoom-in">
+          <div class="customer-cards container-fluid  " data-aos="zoom-in">
 
 
             <div class="customer-cards-second">
@@ -434,8 +442,7 @@
           <img src="images/demo/safe-ride-1.png" alt="img-1">
 
         </div> -->
-          <div class="safety-text">
-            <p class="desc-font-size col-md-8 col-12 ">
+          <div class="safety-text"><p>
               At Rydr, well being of our customers is above everything else. We are constantly in
               pursuit of enhancing our safety measures to ensure every
               Rydr ride ia a pleasant and comfortable experience.
