--- a/safety.html
+++ b/safety.html
@@ -177,6 +177,12 @@
       </div>
     </div>
 
+    <!-- Banner Section  -->
+
+    <div class="top-banner">
+   
+    </div>
+
 
     <h3 class="text-center section-margin">We Ensure The Well Being of Both, Our Customers and Drivers</h3>
 
