--- a/index.html
+++ b/index.html
@@ -109,15 +109,17 @@
           <div class="container h-100">
             <div class="row h-100 align-items-center">
 
-              <div class="col-12 col-md-6 margin-1 text-center">
-                <div class="welcome-text">
-                  <h2 data-animation="fadeInUp" data-delay="100ms" class="mb-30">
+              <div class="col-12 col-md-6 margin-1 text-left" style="padding-left: 0px;">
+                <span class="welcome-text d-inline-block text-center">
+                  <!-- <span class="d-inline-block text-center"> -->
+                  <h2 data-animation="fadeInUp" data-delay="100ms" class="mb-30 ">
                     First ever <em>electric bike</em>
                     <br>service dedicated to
                     <br><span>Delhi Metro</span> travellers
                   </h2>
+                 <!-- </span> -->
 
-                  <h5 data-animation="fadeInUp" data-delay="400ms">
+                  <h5 data-animation="fadeInUp" data-delay="400ms" class="head-points">
                     <span>Affordable</span>
                     <i class="bi bi-dot"></i>
                     <span>Safe</span>
@@ -127,10 +129,9 @@
                     <span bg-success>Green Rides</span>
                   </h5>
 
-                  <a href="#" class="btn rydr-btn btn-3 banner-btn-1 ">Download Rydr</a>
-                  <a href="#" class="btn rydr-btn btn-3 banner-btn-2">SignUp as
-                    Driver</a>
-                </div>
+                  <a href="#" class="btn rydr-btn btn-3 banner-btn-1 ">DOWNLOAD APP</a>
+                  <a href="Driver_registration.html" class="btn rydr-btn btn-3 banner-btn-2">SIGNUP AS DRIVER</a>
+                </span>
               </div>
 
               <div class="col-12 col-md-6 margin-2">
@@ -297,7 +298,7 @@
                 <p><strong>Flat Pricing : </strong>Ensuring fare & equitable fares for all rides, promoting transparency
                   and trust in our pricing system.</p>
                 <hr>
-                <p><strong>Zero emmission :</strong> Minimizing the total CO2 output and implementing measures to
+                <p><strong>Zero Emmission :</strong> Minimizing the total CO2 output and implementing measures to
                   further curtail harmful greenhouse gas emission.</p>
               </ul>
             </div>
@@ -317,10 +318,10 @@
           </div>
           <div class="box-2">
             <div class="bottom-box customers active">
-              <h4>Customers</h4>
+              <h4 class="text-uppercase">Customers</h4>
             </div>
             <div class="bottom-box drivers-riders">
-              <h4>Drivers/Riders</h4>
+              <h4 class="text-uppercase">Drivers/Riders</h4>
             </div>
           </div>
         </div>
