--- a/Driver_registration.html
+++ b/Driver_registration.html
@@ -92,12 +92,12 @@
 
 
     <section>
-        <div class="container page-margin ">
-            <h2 class="text-center">Driver Registration</h2>
+        <div class="container page-margin d-flex flex-column justify-content-center align-items-center ">
+            <h2 class="text-center sub-heading">Driver Registration</h2>
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed super-sub-points" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                             Profile Info
                         </button>
@@ -201,7 +201,7 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed super-sub-points" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             Driving License
                         </button>
@@ -228,7 +228,7 @@
 
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        <button class="accordion-button collapsed super-sub-points" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             Vehicle RC (optional)
                         </button>
@@ -282,7 +282,7 @@
                 <!-- PAN Card Accordion -->
 <div class="accordion-item">
     <h2 class="accordion-header" id="headingFour">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+        <button class="accordion-button collapsed super-sub-points" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
             PAN Card
         </button>
@@ -308,7 +308,7 @@
 
 <div class="accordion-item">
     <h2 class="accordion-header" id="headingFive">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+        <button class="accordion-button collapsed super-sub-points" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
             Aadhar Card
         </button>
