--- a/Drive_with_us.html
+++ b/Drive_with_us.html
@@ -196,7 +196,7 @@
   </section>
 
   <section class="section-margin text-center font-family-Aileron">
-    <h2>Become a Driver With Us</h2>
+    <h2 class="sub-heading">Become a Driver With Us</h2>
   <a href="Driver_registration.html">  <button type="button" class=" reg-but text-center" id="">Registration</button></a>
 
   </section>
