banner and Inti Set

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -140,33 +140,33 @@
 
   <div class="breadcrumb-area mb-0">
     <div class="container">
-        <div class="row title align-items-end">
-            <div class="col-12">
-                <div class="breadcumb--con">
-                    <h2 class=" sub-heading master-head">About Us</h2>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item">
-                                <a href="index.html">
-                                    <i class="fa fa-home"></i>
-                                    Home</a>
-                            </li>
-                            <li class="breadcrumb-item active" aria-current="page">About us</li>
-                        </ol>
-                    </nav>
-                </div>
-            </div>
+      <div class="row title align-items-end">
+        <div class="col-12">
+          <div class="breadcumb--con">
+            
+          </div>
         </div>
+      </div>
     </div>
     <div class="breadcrumb-bg-curve">
-        <img src="images/curve-1.png" alt="">
+      <img src="images/curve-1.png" alt="">
     </div>
-</div>
-
-  <!-- Top Banner Section -->
-  <div class="top-banner">
-   
   </div>
+
+  <!-- Banner Section  -->
+
+<div class="top-banner position-relative">
+  <nav aria-label="breadcrumb" class="position-absolute back-button">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item">
+        <a href="index.html">
+          <i class="fa fa-home"></i>
+          Home</a>
+      </li>
+      <li class="breadcrumb-item active" aria-current="page">About Us</li>
+    </ol>
+  </nav>
+</div>
     
   <div class="mission-container d-flex justify-content-center align-items-center section-margin">
     <div class="row col-md-10 col-12 d-flex justify-content-center align-items-centerr " >
