--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </div>
 
           <div class="about-us-content">
-            <div class="mission-content col-md-7">
+            <div class="mission-content col-lg-7 col-md-8 col-9">
               <h3 class="super-sub-points">Reducing Emissions - TOGETHER</h3>
               <p class="desc-font-size">It's important that we take action to reduce the impact of pollution in the city
                 we love. Rydr's mission is to improve the quality of air we breathe as we ride. You can contribute in
@@ -251,7 +251,7 @@
             <div class="mission-img col-md-4">
               <img class="sec-miss-img" src="images/demo/mission-2.jpg" alt="mission-2">
             </div>
-            <div class="mission-content col-md-7">
+            <div class="mission-content col-lg-7 col-md-8 col-9">
               <h3 class="super-sub-points">Empowered Women & Men - REDEFINE MOBILITY</h3>
               <p>Rydr is more than just a ride-sharing platform. It’s a movement dedicated to providing safe, reliable
                 and empowering transportation for women. Our 100% electric vehicles fleet, driven by women for women and
@@ -262,10 +262,10 @@
 
           <div class="about-us-content">
             
-            <div class="mission-content col-md-7">
+            <div class="mission-content col-lg-7 col-md-8 col-9">
               <h3 class="super-sub-points">Creating Green Jobs</h3>
               <p>Empowering men and women who form part of a large workforce to become self-dependent by rendering green
-                ride-sharing services. <br><br> <a href="Initiative.html" class="know-more">know more</a></p>
+                ride-sharing services. <br><br> <a href="Initiative.html#green-jobs" class="know-more">know more</a></p>
             </div>
             <div class="mission-img col-md-4">
               <img src="images/demo/mission-3.png" alt="mission-3">
