--- a/safety.html
+++ b/safety.html
@@ -157,17 +157,7 @@
         <div class="row title align-items-end">
           <div class="col-12">
             <div class="breadcumb--con">
-              <h2 class=" sub-heading master-head">Safety</h2>
-              <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item">
-                    <a href="index.html">
-                      <i class="fa fa-home"></i>
-                      Home</a>
-                  </li>
-                  <li class="breadcrumb-item active" aria-current="page">Safety</li>
-                </ol>
-              </nav>
+              
             </div>
           </div>
         </div>
@@ -179,9 +169,18 @@
 
     <!-- Banner Section  -->
 
-    <div class="top-banner">
-   
-    </div>
+  <div class="top-banner position-relative">
+    <nav aria-label="breadcrumb" class="position-absolute back-button">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="index.html">
+            <i class="fa fa-home"></i>
+            Home</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">Safety</li>
+      </ol>
+    </nav>
+  </div>
 
 
     <h3 class="text-center section-margin">We Ensure The Well Being of Both, Our Customers and Drivers</h3>
