--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
               <div class="customer-item" data-aos="zoom-in" style="background-color: #ffd7d7;">
                 <div class="item-img"><img src="images/demo/Rider image-icon-01.png" alt="Image 1"></div>
                 <h3 class="mt-3 super-sub-points">Easy pick & drop </h3>
-                <p class='ellipse'>pick you up from any Metro
+                <p class='ellipse'>Pick you up from any Metro
                   Station and Drop you at your
                   destination and Vice-Versap.</p>
               </div>
