--- a/privacy.html
+++ b/privacy.html
@@ -317,7 +317,7 @@
     </div>
 
     <div class="rydr-about-us-area  terms_main section-margin">
-        <div class="container">
+        <div class="container w-75">
             <div class="row align-items-center">
                 <div class="col-12 col-lg-12">
                     <div class="mb-80">
