--- a/safety.html
+++ b/safety.html
@@ -29,13 +29,15 @@
   <link rel="stylesheet" href="responsive/responsive.xl.css">
   <!-- --  -->
 
-   <!-- Poppins Fonts  -->
+  <!-- Poppins Fonts  -->
 
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    
-   
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+
+
 
   <script defer referrerpolicy="origin" src="js/s.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -157,7 +159,7 @@
         <div class="row title align-items-end">
           <div class="col-12">
             <div class="breadcumb--con">
-              
+
             </div>
           </div>
         </div>
@@ -169,49 +171,49 @@
 
     <!-- Banner Section  -->
 
-  <div class="top-banner position-relative">
-    <nav aria-label="breadcrumb" class="position-absolute back-button">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href="index.html">
-            <i class="fa fa-home"></i>
-            Home</a>
-        </li>
-        <li class="breadcrumb-item active" aria-current="page">Safety</li>
-      </ol>
-    </nav>
-  </div>
+    <div class="top-banner position-relative">
+      <nav aria-label="breadcrumb" class="position-absolute back-button">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="index.html">
+              <i class="fa fa-home"></i>
+              Home</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">Safety</li>
+        </ol>
+      </nav>
+    </div>
 
+    <div class="d-flex flex-column justify-content-center align-items-center section-margin">
+      <h3 class="text-center sub-heading section-margin w-75">We Ensure The Well Being of Both,<br> Our Customers and Drivers</h3>
 
-    <h3 class="text-center section-margin">We Ensure The Well Being of Both, Our Customers and Drivers</h3>
-
-    <section class="new-safety-card-section section-margin">
-      <div class="new-safety-card-container">
+      <div class="new-safety-card-section ">
+        <div class="new-safety-card-container">
           <div class="new-safety-card">
-              <img src="images/demo/cust_safeety.png" alt="Card Image 1" class="new-safety-card-img">
-              <div class="new-safety-card-content">
-                  <h3 class="new-safety-card-heading super-sub-points text-center">For Customer</h3>
-                  <p class="">Rides are tracked by Rydr, with access to latitude and longitude
-                    Data.</p>
-              </div>
-              <div class="new-safety-card-footer">
-                <a href="customer.html" class="know-more">Know More</a>
-              </div>
+            <img src="images/demo/cust_safeety.png" alt="Card Image 1" class="new-safety-card-img">
+            <div class="new-safety-card-content">
+              <h3 class="new-safety-card-heading super-sub-points text-center">For Customer</h3>
+              <p class="">Rides are tracked by Rydr, with access to latitude and longitude
+                Data.</p>
+            </div>
+            <div class="new-safety-card-footer">
+              <a href="customer.html" class="know-more">Know More</a>
+            </div>
           </div>
           <div class="new-safety-card">
-              <img src="images/demo/rider-safety.png" alt="Card Image 2" class="new-safety-card-img">
-              <div class="new-safety-card-content">
-                  <h3 class="new-safety-card-heading super-sub-points text-center">For Drivers</h3>
-                  <p class="">From hiring, to monitoring, to ongoing checks, we take all
-                    necessary steps to ensure our Riders safety.</p>
-              </div>
-              <div class="new-safety-card-footer">
-                <a href="rider_safety.html" class="know-more">Know More</a>
-              </div>
+            <img src="images/demo/rider-safety.png" alt="Card Image 2" class="new-safety-card-img">
+            <div class="new-safety-card-content">
+              <h3 class="new-safety-card-heading super-sub-points text-center">For Drivers</h3>
+              <p class="">From hiring, to monitoring, to ongoing checks, we take all
+                necessary steps to ensure our Riders safety.</p>
+            </div>
+            <div class="new-safety-card-footer">
+              <a href="rider_safety.html" class="know-more">Know More</a>
+            </div>
           </div>
+        </div>
       </div>
-  </section>
-
+    </div>
   </section>
 
   <div class="social-media-accordion">
