--- a/AboutUs.html
+++ b/AboutUs.html
@@ -170,23 +170,25 @@
     <div class=" mission-container d-flex justify-content-center align-items-center flex-column">
 
       <div class="about-part-points">
-        <h3 class="super-sub-points text-center">Reducing Emissions - TOGETHER</h3>
+        <h3 class="super-sub-points text-center">Know-us</h3>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo reprehenderit, numquam perferendis nostrum
-          rerum perspiciatis culpa qui saepe maiores blanditiis!It's important that we take action to reduce the impact
-          of pollution in the city we love. Rydr's mission is to improve the quality of air we breathe as we ride. You
-          can contribute in reducing carbon emission by booking a ride with us.</p>
+          Need to catch your metro on time? Want to send a package across Delhi swiftly? Rydr is here for you. As a
+      power-packed initiative by DMRC in collaboration with AutoPe Solutions, Rydr is dedicated to making metro
+      life in Delhi NCR easier and more efficient. Rydr is a smart bike service exclusively designed for the
+      people of Delhi NCR, focusing on affordable, punctual, and hygienic commuting. Our eco-friendly electric
+      fleet ensures a greener environment, while our commitment to safety provides secure rides for women at any
+      time of day. We also foster economic growth by creating job opportunities within the community.</p>
         <br>
-        <a href="Initiative.html" class="know-more">know more</a>
+        <!-- <a href="Initiative.html" class="know-more">know more</a> -->
       </div>
       <br>
 
       <div class="about-part-points">
-        <h3 class="super-sub-points text-center">Empowered Women & Men - REDEFINE MOBILITY</h3>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, maiores. Consequatur ea quaerat commodi
-          iste sit atque quo est ullam.Rydr is more than just a ride-sharing platform. It’s a movement dedicated to
-          providing safe, reliable and empowering transportation for women. Our 100% electric vehicles fleet, driven by
-          women for women and by men for all, ensures a secure, comfortable and green journey every time.</p>
+        
+        <p> Rydr is your one-stop solution for swift and accessible bike rides and package deliveries around
+          NCR. Our green empowerment initiatives reduce carbon footprints and promote sustainable living, making Rydr
+          not just a convenient choice, but a responsible one too. Whether you need a quick ride to the metro or a
+          speedy delivery service, Rydr ensures you meet your needs just in time.</p>
         <a href="Initiative.html#Empowered" class="know-more">know more</a>
       </div>
 
