--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               </ul>
             </div>
             <div class="why-choose-image">
-              <img src="images/demo/why-choose.png" alt="Placeholder Image">
+              <img src="images/slider-2.png" alt="Placeholder Image">
             </div>
           </div>
         </div>
@@ -443,7 +443,7 @@
           <img src="images/demo/safe-ride-1.png" alt="img-1">
 
         </div> -->
-          <div class="safety-text"><p>
+          <div class="safety-text"  spellcheck="true"><p>
               At Rydr, well being of our customers is above everything else. We are constantly in
               pursuit of enhancing our safety measures to ensure every
               Rydr ride ia a pleasant and comfortable experience.
