--- a/safety.html
+++ b/safety.html
@@ -185,12 +185,12 @@
     </div>
 
     <div class="d-flex flex-column justify-content-center align-items-center section-margin">
-      <h3 class="text-center sub-heading section-margin w-75">We Ensure The Well Being of Both,<br> Our Customers and Drivers</h3>
+      <h4 class="text-center sub-heading section-margin w-75">We Ensure The Well Being of Both, Our Customers and Drivers</h4>
 
       <div class="new-safety-card-section ">
         <div class="new-safety-card-container">
           <div class="new-safety-card">
-            <img src="images/demo/cust_safeety.png" alt="Card Image 1" class="new-safety-card-img">
+            <img src="images/cust_image-021.png" alt="Card Image 1" class="new-safety-card-img">
             <div class="new-safety-card-content">
               <h3 class="new-safety-card-heading super-sub-points text-center">For Customer</h3>
               <p class="">Rides are tracked by Rydr, with access to latitude and longitude
@@ -201,7 +201,7 @@
             </div>
           </div>
           <div class="new-safety-card">
-            <img src="images/demo/rider-safety.png" alt="Card Image 2" class="new-safety-card-img">
+            <img src="images/slider-1.png" alt="Card Image 2" class="new-safety-card-img">
             <div class="new-safety-card-content">
               <h3 class="new-safety-card-heading super-sub-points text-center">For Drivers</h3>
               <p class="">From hiring, to monitoring, to ongoing checks, we take all
