--- a/AboutUs.html
+++ b/AboutUs.html
@@ -159,15 +159,50 @@
         <li class="breadcrumb-item">
           <a href="index.html">
             <i class="fa fa-home"></i>
-            Home</a>
+            Home /</a>
         </li>
-        <li class="breadcrumb-item active" aria-current="page">About Us</li>
+        <!-- <li class="breadcrumb-item active" aria-current="page">About Us</li> -->
       </ol>
     </nav>
   </div>
 
+  <section>
+    
+  </section>
+
   <div class=" d-flex justify-content-center align-items-center section-margin">
     <div class=" mission-container d-flex justify-content-center align-items-center flex-column">
+
+      <div class="row align-items-center">
+
+        <div class="col-10 col-md-5">
+            <div class="about-us-thumbnail">
+                <img src="images/know.png" alt="">
+            <!-- <div class="rydr-video-area hi-icon-effect-8">
+                          <a href="https://www.youtube.com/watch?v=sSakBz_eYzQ" class="hi-icon video-play-btn"><i class="fa fa-play"
+                              aria-hidden="true"></i></a>
+                        </div> -->
+            </div>
+        </div>
+
+        <div class="col-10 col-md-7">
+            <!-- <div class="heading-brdr"></div> -->
+            <div class="about-us-content flex-column" style="background-color: transparent;">
+              
+                <p>Rydr is all about meeting instant needs just in time. Want to catch your metro on time? Or like to send
+                                  your package across Delhi? Yes! That is all that Rydr is about. We are a power-packed initiative by DMRC
+                                  in association with AutoPe Solutions, aiming to make your metro life easier.</p>
+                <p>A service that exclusively stands for the people of Delhi NCR. Rydr is an intelligent bike service that
+                                  aims to foster affordable, punctual and hygiene-based commuting around NCR. Moreover, it is a one-stop
+                                  destination that makes speedy delivery and bike rides to the metro swift and accessible.</p>
+                <!-- <ul class="about-list">
+                              <li>To and Fro of commuters to any metro stations in Delhi NCR</li>
+                              <li>Delivery of packages across Delhi NCR</li>
+                            </ul> -->
+
+            </div>
+        </div>
+    </div>
 
       <div class="about-part-points">
         <h3 class="super-sub-points text-center">Know-us</h3>
