--- a/Driver_registration.html
+++ b/Driver_registration.html
@@ -88,6 +88,40 @@
         </div>
       </header>
 
+      <section>
+        
+  <section class="">
+    <div class="breadcrumb-area mb-0">
+      <div class="container">
+        <div class="row title align-items-end">
+          <div class="col-12">
+            <div class="breadcumb--con">
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="breadcrumb-bg-curve">
+        <img src="images/curve-1.png" alt="">
+      </div>
+    </div>
+
+    <!-- Banner Section  -->
+
+    <div class="top-banner position-relative">
+      <nav aria-label="breadcrumb" class="position-absolute back-button">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item">
+            <a href="index.html">
+              <i class="fa fa-home"></i>
+              Home</a>
+          </li>
+          <li class="breadcrumb-item active" aria-current="page">Safety</li>
+        </ol>
+      </nav>
+    </div>
+      </section>
+
 
 
 
