--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           <div class=" section-margin">
             <h2 class="sub-heading">Why Choose RYDR ?</h2>
           </div>
-          <div class="why-choose">
+          <div class="why-choose" data-aos="zoom-in">
             <div class="why-choose-content">
               <ul class="points">
                 <p><strong>No Cancellation : </strong>Zero ride cancellations ensuring uninterrupted and reliable
