--- a/Drive_with_us.html
+++ b/Drive_with_us.html
@@ -41,6 +41,8 @@
 
   <script defer referrerpolicy="origin" src="js/s.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+
+  
 </head>
 
 <body>
@@ -114,9 +116,9 @@
         <li class="breadcrumb-item">
           <a href="index.html">
             <i class="fa fa-home"></i>
-            Home</a>
+            Home /</a>
         </li>
-        <li class="breadcrumb-item active" aria-current="page">Drive With Us</li>
+        <!-- <li class="breadcrumb-item active" aria-current="page">Drive With Us</li> -->
       </ol>
     </nav>
   </div>
