--- a/AboutUs.html
+++ b/AboutUs.html
@@ -228,14 +228,40 @@
       </div>
 
       <br>
-      <div class="about-part-points">
-        <h3 class="super-sub-points text-center">Creating Green Jobs</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias necessitatibus quis totam quisquam illum
-          expedita maxime. Iusto, repellat a necessitatibus aperiam distinctio sequi ut deserunt, sit molestiae officia
-          dolore ipsum!Empowering men and women who form part of a large workforce to become self-dependent by rendering
-          green ride-sharing services.</p>
-        <a href="Initiative.html" class="know-more text-start">know more</a>
+      <!-- <div class="about-part-points"> -->
+        <div class="row align-items-center">
+        <div class="col-11 col-md-7">
+          <!-- <div class="heading-brdr"></div> -->
+          <div class="about-us-content flex-column" style="background-color: transparent;">
+            <h3 class="super-sub-points text-center">Creating Green Jobs</h3>
+              <p>Rydr is all about meeting instant needs just in time. Want to catch your metro on time? Or like to send
+                                your package across Delhi? Yes! That is all that Rydr is about. We are a power-packed initiative by DMRC
+                                in association with AutoPe Solutions, aiming to make your metro life easier.</p>
+              <p>A service that exclusively stands for the people of Delhi NCR. Rydr is an intelligent bike service that
+                                aims to foster affordable, punctual and hygiene-based commuting around NCR. Moreover, it is a one-stop
+                                destination that makes speedy delivery and bike rides to the metro swift and accessible.</p>
+              <!-- <ul class="about-list">
+                            <li>To and Fro of commuters to any metro stations in Delhi NCR</li>
+                            <li>Delivery of packages across Delhi NCR</li>
+                          </ul> -->
+
+          </div>
       </div>
+
+      
+
+        <div class="col-12 col-md-5">
+            <div class="about-us-thumbnail" style="padding-right: 0;">
+                <img src="images/missoin.png" alt="">
+            <!-- <div class="rydr-video-area hi-icon-effect-8">
+                          <a href="https://www.youtube.com/watch?v=sSakBz_eYzQ" class="hi-icon video-play-btn"><i class="fa fa-play"
+                              aria-hidden="true"></i></a>
+                        </div> -->
+            </div>
+        </div>
+      </div>
+        <!-- <a href="Initiative.html" class="know-more text-start">know more</a> -->
+      <!-- </div> -->
 
       <!-- <div class="mission-img col-md-6">
                 <img src="images/demo/mission-3.png" alt="mission-3">
