--- a/AboutUs.html
+++ b/AboutUs.html
@@ -136,7 +136,7 @@
     </div>
   </header>
 
-  <div class="breadcrumb-area mb-0">
+  <!-- <div class="breadcrumb-area mb-0">
     <div class="container">
       <div class="row title align-items-end">
         <div class="col-12">
@@ -149,7 +149,7 @@
     <div class="breadcrumb-bg-curve">
       <img src="images/curve-1.png" alt="">
     </div>
-  </div>
+  </div> -->
 
   <!-- Banner Section  -->
 
@@ -175,7 +175,7 @@
 
       <div class="row align-items-center">
 
-        <div class="col-10 col-md-5">
+        <div class="col-12 col-md-5">
             <div class="about-us-thumbnail">
                 <img src="images/know.png" alt="">
             <!-- <div class="rydr-video-area hi-icon-effect-8">
@@ -185,7 +185,7 @@
             </div>
         </div>
 
-        <div class="col-10 col-md-7">
+        <div class="col-12 col-md-7">
             <!-- <div class="heading-brdr"></div> -->
             <div class="about-us-content flex-column" style="background-color: transparent;">
               
@@ -230,7 +230,7 @@
       <br>
       <!-- <div class="about-part-points"> -->
         <div class="row align-items-center">
-        <div class="col-11 col-md-7">
+        <div class="col-12 col-md-7">
           <!-- <div class="heading-brdr"></div> -->
           <div class="about-us-content flex-column" style="background-color: transparent;">
             <h3 class="super-sub-points text-center">Creating Green Jobs</h3>
