--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <h2 class="text-center sub-heading">Our Moto</h2>
           </div>
 
-          <div class="about-us-content" data-aos="zoom-out-left">
+          <div class="about-us-content" data-aos="fade-left">
             <div class="mission-content col-lg-7 col-md-8 col-9">
               <h3 class="super-sub-points">Reducing Emissions - TOGETHER</h3>
               <p class="desc-font-size">It's important that we take action to reduce the impact of pollution in the city
@@ -247,7 +247,7 @@
 
           <br>
 
-          <div class="about-us-content" data-aos="zoom-out-right">
+          <div class="about-us-content" data-aos="fade-right">
             <div class="mission-img col-md-4">
               <img class="sec-miss-img" src="images/demo/mission-2.jpg" alt="mission-2">
             </div>
@@ -260,7 +260,7 @@
             </div>
           </div>
 
-          <div class="about-us-content" data-aos="zoom-out-left">
+          <div class="about-us-content" data-aos="fade-left">
             
             <div class="mission-content col-lg-7 col-md-8 col-9">
               <h3 class="super-sub-points">Creating Green Jobs</h3>
