--- a/customer.html
+++ b/customer.html
@@ -35,7 +35,8 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
-   
+   <!-- AOS  -->
+   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <script defer referrerpolicy="origin" src="js/s.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -118,7 +119,7 @@
 
       
 
-      <div class="new-safety-card">
+      <div class="new-safety-card"  data-aos="zoom-in">
         <img src="images/demo/cust_safeety.png" alt="Card Image 1" class="new-safety-card-img">
         <div class="new-safety-card-content">
           <!-- <h3 class="new-safety-card-heading">For Customer</h3> -->
@@ -396,6 +397,15 @@
   <script src="js/active.js"></script>
 
   <script src="js/testimonial.js"></script>
+
+  <script>
+    AOS.init({
+      offset: 80,
+      duration: 1000,
+    }
+    );
+  </script>
+
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
   <script>
