--- a/rider_safety.html
+++ b/rider_safety.html
@@ -35,7 +35,7 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     
-   
+   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <script defer referrerpolicy="origin" src="js/s.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
@@ -132,9 +132,9 @@
             </div>
           </div> -->
 
-        <div class='safety-cust-card section-margin'>
+        <div class='safety-cust-card section-margin'  >
 
-          <div class="new-safety-card">
+          <div class="new-safety-card" data-aos="zoom-in">
             <img src="images/demo/rider-safety.png" alt="Card Image 2" class="new-safety-card-img">
             <div class="new-safety-card-content">
         
@@ -367,6 +367,14 @@
   <script src="js/active.js"></script>
 
   <script src="js/testimonial.js"></script>
+  
+  <script>
+    AOS.init({
+      offset: 80,
+      duration: 1000,
+    }
+    );
+  </script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
   <script>
