a lot look change

--- a/Drive_with_us.html
+++ b/Drive_with_us.html
@@ -42,7 +42,12 @@
   <script defer referrerpolicy="origin" src="js/s.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
-  
+  <style>
+    .top-banner{
+      background: url('images/demo/drive-with-banner.jpg') no-repeat center center;
+      background-size: cover;
+    }
+</style>
 </head>
 
 <body>
@@ -112,14 +117,11 @@
 
   <div class="top-banner position-relative">
     <nav aria-label="breadcrumb" class="position-absolute back-button">
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href="index.html">
-            <i class="fa fa-home"></i>
-            Home /</a>
-        </li>
-        <!-- <li class="breadcrumb-item active" aria-current="page">Drive With Us</li> -->
-      </ol>
+      <a href="index.html"> 
+        <div id="homeButton" class="sticky-button">
+            <i class="fa fa-angle-left" aria-hidden="true"></i>
+          </div>
+      </a>
     </nav>
   </div>
 
@@ -128,75 +130,93 @@
   <div class="d-flex justify-content-center">
     <div class="adv-section d-flex flex-wrap justify-content-center">
 
-      <div class="adv-card col-3">
-        <img src="images/demo/adv-1.png" alt="Placeholder Image" class="adv-card-img">
+      <div class="adv-card col-3 single-service-area">
+      <div class="service-icon">
+        <img  src="images/demo/adv-1.png" alt="Placeholder Image" class="adv-card-img">
+      </div>
         <div class="adv-card-content ">
-          <h3 class="adv-card-title super-sub-points">Zero Ownership Cost</h3>
+          <h5 class="adv-card-title ">Zero Ownership Cost</h5>
         </div>
       </div>
 
 
 
-      <div class="adv-card col-3">
-        <img src="images/demo/adv-2.png" alt="Placeholder Image" class="adv-card-img">
+      <div class="adv-card col-3 single-service-area">
+        <div class="service-icon">
+          <img  src="images/demo/adv-2.png" alt="Placeholder Image" class="adv-card-img">
+        </div>
         <div class="adv-card-content">
-          <h3 class="adv-card-title super-sub-points">No Requirement of Commercial DL</h3>
+          <h5 class="adv-card-title ">No Requirement of Commercial DL</h5>
 
         </div>
       </div>
 
-      <div class="adv-card col-3">
-        <img src="images/demo/adv-3.png" alt="Placeholder Image" class="adv-card-img">
+      <div class="adv-card col-3 single-service-area">
+        <div class="service-icon">
+          <img  src="images/demo/adv-3.png" alt="Placeholder Image" class="adv-card-img">
+        </div>
         <div class="adv-card-content">
-          <h3 class="adv-card-title super-sub-points">Flexible Working Hours</h3>
+          <h5 class="adv-card-title ">Flexible Working Hours</h5>
 
         </div>
       </div>
 
-      <div class="adv-card col-3">
-        <img src="images/demo/adv-4.png" alt="Placeholder Image" class="adv-card-img">
+      <div class="adv-card col-3 single-service-area">
+        <div class="service-icon">
+          <img  src="images/demo/adv-4.png" alt="Placeholder Image" class="adv-card-img">
+        </div>
         <div class="adv-card-content">
-          <h3 class="adv-card-title super-sub-points">Empowering Through Driving</h3>
+          <h5 class="adv-card-title ">Empowering Through Driving</h5>
 
         </div>
       </div>
 
-      <div class="adv-card col-3">
-        <img src="images/demo/adv-5.png" alt="Placeholder Image" class="adv-card-img">
+      <div class="adv-card col-3 single-service-area">
+        <div class="service-icon">
+          <img  src="images/demo/adv-5.png" alt="Placeholder Image" class="adv-card-img">
+        </div>
         <div class="adv-card-content">
-          <h3 class="adv-card-title super-sub-points">Competitive Earning</h3>
+          <h5 class="adv-card-title ">Competitive Earning</h5>
 
         </div>
       </div>
 
-      <div class="adv-card col-3">
-        <img src="images/demo/adv-6.png" alt="Placeholder Image" class="adv-card-img">
+      <div class="adv-card col-3 single-service-area">
+        <div class="service-icon">
+          <img  src="images/demo/adv-6.png" alt="Placeholder Image" class="adv-card-img">
+        </div>
         <div class="adv-card-content">
-          <h3 class="adv-card-title super-sub-points">Safe & Supportive Community</h3>
+          <h5 class="adv-card-title">Safe & Supportive Community</h5>
 
         </div>
       </div>
 
-      <div class="adv-card col-3">
-        <img src="images/demo/adv-7.png" alt="Placeholder Image" class="adv-card-img">
+      <div class="adv-card col-3 single-service-area">
+        <div class="service-icon">
+          <img  src="images/demo/adv-7.png" alt="Placeholder Image" class="adv-card-img">
+        </div>
         <div class="adv-card-content">
-          <h3 class="adv-card-title super-sub-points">Agent of Safeguarding Environment</h3>
+          <h5 class="adv-card-title ">Agent of Safeguarding Environment</h5>
 
         </div>
       </div>
 
-      <div class="adv-card col-3">
-        <img src="images/demo/adv-8.png" alt="Placeholder Image" class="adv-card-img">
+      <div class="adv-card col-3 single-service-area">
+        <div class="service-icon">
+          <img  src="images/demo/adv-8.png" alt="Placeholder Image" class="adv-card-img">
+        </div>
         <div class="adv-card-content">
-          <h3 class="adv-card-title super-sub-points ">Growth & Expansion Opportunities</h3>
+          <h5 class="adv-card-title ">Growth & Expansion Opportunities</h5>
 
         </div>
       </div>
 
-      <div class="adv-card col-3">
-        <img src="images/demo/adv-9.png" alt="Placeholder Image" class="adv-card-img">
+      <div class="adv-card col-3 single-service-area">
+        <div class="service-icon">
+          <img  src="images/demo/adv-9.png" alt="Placeholder Image" class="adv-card-img">
+        </div>
         <div class="adv-card-content">
-          <h3 class="adv-card-title super-sub-points">Access to Partner Benefits</h3>
+          <h5 class="adv-card-title">Access to Partner Benefits</h5>
 
         </div>
       </div>
