--- a/Driver_registration.html
+++ b/Driver_registration.html
@@ -110,14 +110,14 @@
 
     <div class="top-banner position-relative">
       <nav aria-label="breadcrumb" class="position-absolute back-button">
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="index.html">
-              <i class="fa fa-home"></i>
-              Home</a>
-          </li>
-          <li class="breadcrumb-item active" aria-current="page">Safety</li>
-        </ol>
+        <div id="homeButton" class="sticky-button">
+            <a href="Drive_with_us.html"> 
+                <div id="homeButton" class="sticky-button">
+                    <i class="fa fa-angle-left" aria-hidden="true"></i>
+                  </div>
+              </a>
+            
+        </div>
       </nav>
     </div>
       </section>
